HTML eCSS: Classes, posicionamento e Flexbox

--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível 
-        <strong>com um Front-end de qualidade!
-        </strong></h1>
-        <p>
-            Olá! Sou Romulo Rorschach, desenvolvedor 
-            Front-end com especialidade em <strong> React, HTML e 
-            CSS</strong>. Ajudo pequenos negócios e designers a 
-            colocarem em prática boas ideias. Vamos 
-            conversar?
-        </p>
-        <a href="https://instagram.com/r6mulochaves">Instagram</a>
-        <a href="https://github.com/R6mulo">GitHub</a>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
+            class="titulo-destaque">com um Front-end de qualidade!
+            </strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
+            Front-end com especialidade em React, HTML e
+            CSS. Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos
+            conversar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://instagram.com/r6mulochaves">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/R6mulo">GitHub</a>
+            </div>
+        </section>
+        <style>img {
+                width: 488px; /* Define a largura para 488 pixels */
+                height: 550px; /* Mantém a proporção da altura */
+            }   
+        </style>
         <img src="imagem.png" alt="Foto Programando">
     </main>
     <footer></footer>
